--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -3,6 +3,7 @@ body,
 #root {
     height: 100vh;
     margin: 0px;
+    cursor: url('/public/cursor_seta.svg'), auto;
 }
 
 @font-face {
@@ -56,4 +57,28 @@ body,
     font-style: normal;
     font-weight: normal;
     src: local("Inter Regular"), url("../font/Inter-Regular.ttf") format("truetype");
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #EC64A1;
+    border-radius: 5px;
+    cursor: url('/public/cursor_seta.svg'), auto;
+}
+
+.scrollbar-custom {
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f1f1f1;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar-corner {
+    cursor: url('/public/cursor_seta.svg'), auto;
 }
